Add POST /integrations
