# imbi/templates/openapi.yaml
@@ -1573,6 +1573,59 @@ paths:
                 type: array
                 items:
                   $ref: '#/paths/~1integrations~1%7Bname%7D/get/responses/200/content/application~1json/schema'
+    post:
+      description: Add a new integration
+      summary: Add integration
+      tags:
+        - Integrations
+      requestBody:
+        description: Integration details
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                api_endpoint:
+                  type: string
+                callback_url:
+                  type: string
+                authorization_endpoint:
+                  type: string
+                token_endpoint:
+                  type: string
+                revoke_endpoint:
+                  type: string
+                  nullable: true
+                client_id:
+                  type: string
+                client_secret:
+                  type: string
+                  nullable: true
+                public_client:
+                  type: boolean
+              required:
+                - name
+                - api_endpoint
+                - callback_url
+                - authorization_endpoint
+                - token_endpoint
+                - revoke_endpoint
+                - client_id
+                - client_secret
+                - public_client
+              additionalProperties: false
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: string
   '/integrations/{name}':
     get:
       description: Retrieve a specific integration by name
@@ -1675,7 +1728,6 @@ paths:
           schema:
             type: string
             pattern: ^\d+$
-
       responses:
         '200':
           description: Success
@@ -1684,7 +1736,6 @@ paths:
               schema:
                 type: array
                 items:
-
                   title: Operations Log Entry
                   description: Describes an audit log entry for entity operational changes
                   type: object
@@ -5811,7 +5862,6 @@ tags:
     description: Endpoints used to retrieve information about applications that Imbi is integrated with
   - name: Monitoring & Metrics
     description: 'Endpoints used for health checking, service status, and service metrics'
-
 x-tagGroups:
   - name: Activity Feed
     tags:
